# aioipapi

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
aioipapi/: __init__.py  _client.py  _config.py  _constants.py  _exceptions.py  _logging.py  _utils.py
tests/: conftest.py  test_aioipapi.py
