[tool.poetry]
name = "aioipapi"
version = "0.1.0"
description = "Asynchronous aiohttp based client for https://ip-api.com"
authors = ["Eugene Prilepin <esp.home@gmail.com>"]
license = "MIT"
readme = "README.md"

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
