[tool.poetry]
name = "aioipapi"
version = "0.1.3"
description = "Asynchronous aiohttp based client for https://ip-api.com"
authors = ["Eugene Prilepin <esp.home@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md"]
keywords = ["ipapi", "ip-api", "geoip", "geo-ip", "geolocation", "geolocation-api"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

repository = "https://github.com/espdev/aioipapi"
documentation = "https://aioipapi.readthedocs.io/en/latest"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6.2"
yarl = "^1.5.1"
aioitertools = "^0.7.0"
tenacity = "^6.2.0"
pydantic = "^1.6.1"
importlib_metadata = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-asyncio = "^0.14.0"
pytest-coverage = "^0.0"
coveralls = "^2.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
